...
) {
    var isPasswordVisible by remember { mutableStateOf(false) }
    TextField(
        value = value,
        onValueChange = onValueChange,
        singleLine = true,
        label = { Text("Password") },
        placeholder = { Text("Input your password") },
        trailingIcon = {
            IconToggleButton(
                checked = isPasswordVisible,
                onCheckedChange = { isPasswordVisible = it },
                modifier = Modifier.testTag(PASSWORD_ICON_SHOW_TEST_TAG)
...
